--- a/ProyectoReservas/appsettings.json
+++ b/ProyectoReservas/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //el nombre DefaultConnection tiene qe ser igual al de progam.cs
-    "DefaultConnection": "Server=DESKTOP-4327SUK;Database=Restaurante_Reservas;User Id=sa;Password=123;MultipleActiveResultSets=true;Encrypt=false;"
+    "DefaultConnection": "Server=DESKTOP-9S4M063;Database=Restaurante_Reservas;User Id=sa;Password=123;MultipleActiveResultSets=true;Encrypt=false;"
   }
 }
